[package]
name = "microservice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.22", features = ["json"] }
tokio-postgres = "0.7.10"
serde = { version = "1.0.183", features = ["derive"]}
serde_json = "1.0.104"
tokio = { version = "1", features = ["full"]}
rdkafka = { version = "0.27.0", features = ["cmake-build", "ssl"] }
apache-avro = "0.16.0"
deadpool-postgres = "0.11.0"