[package]
name = "rest-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
tokio-postgres = "0.7.10"
serde = { version = "1.0.183", features = ["derive"]}
serde_json = "1.0.104"
tokio = { version = "1", features = ["full"]}
deadpool-postgres = "0.11.0"

